Revert "Reduce include directory scope"
The intention was to make only our headers visible, and not everything in <prefix>/include/. Instead, it made include/jegp/ the include directory.

This reverts commit 7fc1082ebe24a0f89c4daecf4d7982390dbe0827.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,7 +5,7 @@ project(jegp VERSION 3.0.0 LANGUAGES CXX)
 add_library(jegp INTERFACE)
 target_include_directories(jegp INTERFACE
     $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
-    $<INSTALL_INTERFACE:include/jegp>
+    $<INSTALL_INTERFACE:include>
 )
 set_property(TARGET jegp APPEND PROPERTY
     COMPATIBLE_INTERFACE_STRING jegp_VERSION_MAJOR)
