Move .cmake files to cmake/
Separate dependency finding.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,13 +16,10 @@ else()
     target_compile_options(jegp INTERFACE -std=c++1z)
 endif()
 
-find_package(Boost.Hana QUIET)
-if (Boost.Hana_FOUND)
-    target_link_libraries(jegp INTERFACE hana)
-else()
-    find_package(Boost 1.61.0 REQUIRED)
-    target_link_libraries(jegp INTERFACE Boost::boost)
-endif()
+include(${CMAKE_CURRENT_SOURCE_DIR}/cmake/find_dependencies.cmake)
+target_link_libraries(jegp INTERFACE
+    $<$<BOOL:${Boost.Hana_FOUND}>:hana>
+    $<$<NOT:$<BOOL:${Boost.Hana_FOUND}>>:Boost::boost>)
 
 install(TARGETS jegp EXPORT jegpTargets)
 install(DIRECTORY include/ DESTINATION include)
@@ -32,14 +29,10 @@ write_basic_package_version_file(jegpConfigVersion.cmake
     VERSION ${jegp_VERSION}
     COMPATIBILITY SameMajorVersion)
 
-export(EXPORT jegpTargets FILE jegpTargets.cmake)
-configure_file(jegpConfig.cmake
-    ${CMAKE_CURRENT_BINARY_DIR}/jegpConfig.cmake
-    COPYONLY)
+export(EXPORT jegpTargets)
+file(COPY cmake/ DESTINATION .)
 
-install(EXPORT jegpTargets DESTINATION cmake)
-install(
-    FILES
-        ${CMAKE_CURRENT_BINARY_DIR}/jegpConfig.cmake
-        ${CMAKE_CURRENT_BINARY_DIR}/jegpConfigVersion.cmake
-    DESTINATION cmake)
+install(EXPORT jegpTargets DESTINATION lib/cmake/jegp)
+install(DIRECTORY cmake/   DESTINATION lib/cmake/jegp)
+install(FILES ${CMAKE_CURRENT_BINARY_DIR}/jegpConfigVersion.cmake
+    DESTINATION lib/cmake/jegp)
