--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,7 @@ matrix:
         packages:
         - g++-8
     env:
-    - MATRIX_EVAL="CC=gcc-8 && CXX=g++-8"
+    - MATRIX_EVAL="CXX=g++-8"
   - os: linux
     addons:
       apt:
@@ -26,10 +26,10 @@ matrix:
         - clang-6.0
         - g++-8
     env:
-    - MATRIX_EVAL="CC=clang-6.0 && CXX=clang++-6.0"
+    - MATRIX_EVAL="CXX=clang++-6.0"
   - os: linux
     env:
-    - MATRIX_EVAL="CC=clang-6.0 && CXX=clang++ && CMAKE_CXX_FLAGS=\"$CMAKE_CXX_FLAGS -stdlib=libc++\" && CMAKE_EXE_LINKER_FLAGS=-lc++abi"
+    - MATRIX_EVAL="CXX=clang++ && CMAKE_CXX_FLAGS=\"$CMAKE_CXX_FLAGS -stdlib=libc++\" && CMAKE_EXE_LINKER_FLAGS=-lc++abi"
 
 before_script:
 - eval "${MATRIX_EVAL}"
