--- a/.travis.yml
+++ b/.travis.yml
@@ -37,7 +37,7 @@ before_script:
 - |
   if [[ -v LIBCXX_VERSION ]]; then
     travis/install_clang.sh ${LIBCXX_VERSION}
-    CMAKE_CXX_FLAGS=-stdlib=libc++
+    CMAKE_CXX_FLAGS="$CMAKE_CXX_FLAGS -stdlib=libc++"
     CMAKE_EXE_LINKER_FLAGS=-lc++abi
   fi
 
