Remove MATRIX_EVAL logic

--- a/.travis.yml
+++ b/.travis.yml
@@ -14,8 +14,7 @@ matrix:
         - ubuntu-toolchain-r-test
         packages:
         - g++-8
-    env:
-    - MATRIX_EVAL="CXX=g++-8"
+    env: CXX=g++-8
   - os: linux
     addons:
       apt:
@@ -25,11 +24,9 @@ matrix:
         packages:
         - clang-6.0
         - g++-8
-    env:
-    - MATRIX_EVAL="CXX=clang++-6.0"
+    env: CXX=clang++-6.0
   - os: linux
-    env:
-    - MATRIX_EVAL="CXX=clang++ && LIBCXX_VERSION=6.0.0"
+    env: CXX=clang++ LIBCXX_VERSION=6.0.0
   - os: linux
     addons:
       apt:
@@ -39,11 +36,9 @@ matrix:
         packages:
         - clang-7
         - g++-8
-    env:
-    - MATRIX_EVAL="CXX=clang++"
+    env: CXX=clang++
   - os: linux
-    env:
-    - MATRIX_EVAL="CXX=clang++ && LIBCXX_VERSION=7.0.0"
+    env: CXX=clang++ LIBCXX_VERSION=7.0.0
   - os: osx
     compiler: clang
     addons:
@@ -53,7 +48,6 @@ matrix:
         update: true
 
 before_script:
-- eval "${MATRIX_EVAL}"
 - if [ "$TRAVIS_OS_NAME" == "linux" ]; then travis/install_cmake.sh; fi
 - |
   if [ -n "$LIBCXX_VERSION" ]; then
