--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,5 @@
 language: cpp
+dist: xenial
 
 env:
   global:
@@ -31,19 +32,17 @@ matrix:
     env:
     - MATRIX_EVAL="CXX=clang++ && LIBCXX_VERSION=6.0.0"
   - os: linux
+    compiler: clang
     addons:
       apt:
         sources:
-        - llvm-toolchain-trusty-7
         - ubuntu-toolchain-r-test
         packages:
-        - clang-7
         - g++-8
-    env:
-    - MATRIX_EVAL="CXX=clang++"
   - os: linux
+    compiler: clang
     env:
-    - MATRIX_EVAL="CXX=clang++ && LIBCXX_VERSION=7.0.0"
+    - MATRIX_EVAL="LIBCXX_VERSION=7.0.0"
   - os: osx
     compiler: clang
     addons:
@@ -54,10 +53,11 @@ matrix:
 
 before_script:
 - eval "${MATRIX_EVAL}"
-- if [ "$TRAVIS_OS_NAME" == "linux" ]; then travis/install_cmake.sh; fi
 - |
   if [ -n "$LIBCXX_VERSION" ]; then
-    travis/install_clang.sh ${LIBCXX_VERSION}
+    if [ "$LIBCXX_VERSION" != "7.0.0" ]; then
+      travis/install_clang.sh ${LIBCXX_VERSION}
+    fi
     CMAKE_CXX_FLAGS="$CMAKE_CXX_FLAGS -stdlib=libc++"
     CMAKE_EXE_LINKER_FLAGS=-lc++abi
   fi
