--- a/.travis.yml
+++ b/.travis.yml
@@ -21,13 +21,11 @@ matrix:
     addons:
       apt:
         sources:
-        - llvm-toolchain-trusty-6.0
         - ubuntu-toolchain-r-test
         packages:
-        - clang-6.0
         - g++-8
     env:
-    - MATRIX_EVAL="CXX=clang++-6.0"
+    - MATRIX_EVAL="CXX=clang++-6.0 && LIBCXX_VERSION=6.0.0 && USE_LIBSTDCXX=1"
   - os: linux
     env:
     - MATRIX_EVAL="CXX=clang++ && LIBCXX_VERSION=6.0.0"
@@ -58,8 +56,10 @@ before_script:
     if [ "$LIBCXX_VERSION" != "7.0.0" ]; then
       travis/install_clang.sh ${LIBCXX_VERSION}
     fi
-    CMAKE_CXX_FLAGS="$CMAKE_CXX_FLAGS -stdlib=libc++"
-    CMAKE_EXE_LINKER_FLAGS=-lc++abi
+    if [ -n "$USE_LIBSTDCXX" ]; then
+      CMAKE_CXX_FLAGS="$CMAKE_CXX_FLAGS -stdlib=libc++"
+      CMAKE_EXE_LINKER_FLAGS=-lc++abi
+    fi
   fi
 
 script:
