--- a/.travis.yml
+++ b/.travis.yml
@@ -23,6 +23,8 @@ matrix:
         - ubuntu-toolchain-r-test
         packages:
         - g++-8
+    env:
+    - MATRIX_EVAL="CXX=g++-8"
   - os: linux
     compiler: clang
     addons:
@@ -54,7 +56,7 @@ before_script:
 - eval "${MATRIX_EVAL}"
 - |
   if [ -n "$CLANG_VERSION" ]; then
-    travis/install_clang.sh ${LIBCXX_VERSION}
+    travis/install_clang.sh ${CLANG_VERSION}
   fi
   if [ -n "$USE_LIBCXX" ]; then
     CMAKE_CXX_FLAGS="$CMAKE_CXX_FLAGS -stdlib=libc++"
