--- a/.travis.yml
+++ b/.travis.yml
@@ -23,8 +23,7 @@ matrix:
         - ubuntu-toolchain-r-test
         packages:
         - g++-8
-    env:
-    - MATRIX_EVAL="CXX=g++-8"
+    env: MATRIX_EVAL="CXX=g++-8"
   - os: linux
     compiler: clang
     addons:
@@ -33,12 +32,10 @@ matrix:
         - ubuntu-toolchain-r-test
         packages:
         - g++-8
-    env:
-    - MATRIX_EVAL="CLANG_VERSION=6.0.0"
+    env: MATRIX_EVAL="CLANG_VERSION=6.0.0"
   - os: linux
     compiler: clang
-    env:
-    - MATRIX_EVAL="CLANG_VERSION=6.0.0 && USE_LIBCXX=1"
+    env: MATRIX_EVAL="CLANG_VERSION=6.0.0 && USE_LIBCXX=1"
   - os: linux
     compiler: clang
     addons:
@@ -49,8 +46,7 @@ matrix:
         - g++-8
   - os: linux
     compiler: clang
-    env:
-    - MATRIX_EVAL="USE_LIBCXX=1"
+    env: MATRIX_EVAL="USE_LIBCXX=1"
 
 before_script:
 - eval "${MATRIX_EVAL}"
