Use jegp_cmake_modules

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,12 +1,9 @@
-function(jegp_add_test name)
-    add_executable(jegp_test_${name} ${name}.cpp)
-    target_compile_options(jegp_test_${name} PRIVATE ${ARGN})
-    target_link_libraries(jegp_test_${name} PRIVATE jegp::jegp)
-#    add_test(jegp_test_${name} jegp_test_${name})
-endfunction()
+include(JEGPTestUtilities)
 
-jegp_add_test(include_utility)
-jegp_add_test(all_includes)
+jegp_add_header_test()
 jegp_add_test(utility
-    $<$<OR:$<CXX_COMPILER_ID:Clang>,$<CXX_COMPILER_ID:AppleClang>>:
-        -Wno-missing-braces -Wno-inaccessible-base>)
+    COMPILE_ONLY
+    COMPILE_OPTIONS
+        $<$<OR:$<CXX_COMPILER_ID:Clang>,$<CXX_COMPILER_ID:AppleClang>>:
+            -Wno-missing-braces -Wno-inaccessible-base>
+    LINK_LIBRARIES range-v3)
