--- a/.travis.yml
+++ b/.travis.yml
@@ -50,6 +50,7 @@ matrix:
 
 before_script:
 - eval "${MATRIX_EVAL}"
+- if [ "$TRAVIS_OS_NAME" == "linux" ]; then travis/install_cmake.sh; fi
 - |
   if [ -n "$CLANG_VERSION" ]; then
     travis/install_clang.sh ${CLANG_VERSION}
