--- a/.travis.yml
+++ b/.travis.yml
@@ -25,6 +25,15 @@ matrix:
         - g++-8
     env: MATRIX_EVAL="CXX=g++-8"
   - os: linux
+    compiler: gcc
+    addons:
+      apt:
+        sources:
+        - ubuntu-toolchain-r-test
+        packages:
+        - g++-9
+    env: MATRIX_EVAL="CXX=g++-9"
+  - os: linux
     compiler: clang
     addons:
       apt:
