--- a/.travis.yml
+++ b/.travis.yml
@@ -56,6 +56,18 @@ matrix:
   - os: linux
     compiler: clang
     env: MATRIX_EVAL="USE_LIBCXX=1"
+  - os: linux
+    compiler: clang
+    addons:
+      apt:
+        sources:
+        - ubuntu-toolchain-r-test
+        packages:
+        - g++-8
+    env: MATRIX_EVAL="CLANG_VERSION=8.0.0"
+  - os: linux
+    compiler: clang
+    env: MATRIX_EVAL="CLANG_VERSION=8.0.0 && USE_LIBCXX=1"
 
 before_script:
 - eval "${MATRIX_EVAL}"
