Fix export namespace

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,7 +16,7 @@ target_link_libraries(jegp INTERFACE range-v3)
 install(TARGETS jegp EXPORT jegp-targets)
 
 if(JEGP_DEPENDENCIES_IMPORTED)
-    export(EXPORT jegp-targets NAMESPACE jegp)
+    export(EXPORT jegp-targets NAMESPACE jegp::)
     file(COPY cmake/jegp-config.cmake DESTINATION .)
 endif()
 include(CMakePackageConfigHelpers)
@@ -26,7 +26,7 @@ write_basic_package_version_file(jegp-config-version.cmake
 
 install(EXPORT jegp-targets
     DESTINATION lib/cmake/jegp
-    NAMESPACE jegp)
+    NAMESPACE jegp::)
 install(
     FILES
         cmake/jegp-config.cmake
