Simplify matrix description

--- a/.travis.yml
+++ b/.travis.yml
@@ -17,7 +17,7 @@ matrix:
         update: true
   - os: linux
     compiler: gcc
-    addons:
+    addons: &gcc8
       apt:
         sources:
         - ubuntu-toolchain-r-test
@@ -26,7 +26,7 @@ matrix:
     env: MATRIX_EVAL="CXX=g++-8"
   - os: linux
     compiler: gcc
-    addons:
+    addons: &gcc9
       apt:
         sources:
         - ubuntu-toolchain-r-test
@@ -35,35 +35,20 @@ matrix:
     env: MATRIX_EVAL="CXX=g++-9"
   - os: linux
     compiler: clang
-    addons:
-      apt:
-        sources:
-        - ubuntu-toolchain-r-test
-        packages:
-        - g++-8
+    addons: *gcc8
     env: MATRIX_EVAL="CLANG_VERSION=6.0.0"
   - os: linux
     compiler: clang
     env: MATRIX_EVAL="CLANG_VERSION=6.0.0 && USE_LIBCXX=1"
   - os: linux
     compiler: clang
-    addons:
-      apt:
-        sources:
-        - ubuntu-toolchain-r-test
-        packages:
-        - g++-8
+    addons: *gcc8
   - os: linux
     compiler: clang
     env: MATRIX_EVAL="USE_LIBCXX=1"
   - os: linux
     compiler: clang
-    addons:
-      apt:
-        sources:
-        - ubuntu-toolchain-r-test
-        packages:
-        - g++-8
+    addons: *gcc8
     env: MATRIX_EVAL="CLANG_VERSION=8.0.0"
   - os: linux
     compiler: clang
