--- a/.travis.yml
+++ b/.travis.yml
@@ -35,20 +35,25 @@ matrix:
     env: MATRIX_EVAL="CXX=g++-9"
   - os: linux
     compiler: clang
-    addons: *gcc8
+    addons: &libstdc++-8
+      apt:
+        sources:
+        - ubuntu-toolchain-r-test
+        packages:
+        - libstdc++-8-dev
     env: MATRIX_EVAL="CLANG_VERSION=6.0.0"
   - os: linux
     compiler: clang
     env: MATRIX_EVAL="CLANG_VERSION=6.0.0 && USE_LIBCXX=1"
   - os: linux
     compiler: clang
-    addons: *gcc8
+    addons: *libstdc++-8
   - os: linux
     compiler: clang
     env: MATRIX_EVAL="USE_LIBCXX=1"
   - os: linux
     compiler: clang
-    addons: *gcc8
+    addons: *libstdc++-8
     env: MATRIX_EVAL="CLANG_VERSION=8.0.0"
   - os: linux
     compiler: clang
