Upgrade CMake version

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -4,5 +4,5 @@ jegp_add_header_test()
 jegp_add_test(utility
     COMPILE_ONLY
     COMPILE_OPTIONS
-        $<$<OR:$<CXX_COMPILER_ID:Clang>,$<CXX_COMPILER_ID:AppleClang>>:
+        $<$<CXX_COMPILER_ID:Clang,AppleClang>:
             -Wno-missing-braces -Wno-inaccessible-base>)
