--- a/.travis.yml
+++ b/.travis.yml
@@ -54,6 +54,18 @@ matrix:
     compiler: clang
     addons: *libstdcxx8
     env: MATRIX_EVAL="CLANG_VERSION=8.0.0"
+  - os: linux
+    compiler: clang
+    env: MATRIX_EVAL="CLANG_VERSION=9.0.0 && USE_LIBCXX=1"
+  - os: linux
+    compiler: clang
+    addons: &libstdcxx9
+      apt:
+        sources:
+        - sourceline: 'ppa:ubuntu-toolchain-r/test'
+        packages:
+        - libstdc++-9-dev
+    env: MATRIX_EVAL="CLANG_VERSION=9.0.0"
 
 before_script:
 - eval "${MATRIX_EVAL}"
