--- a/.travis.yml
+++ b/.travis.yml
@@ -78,11 +78,12 @@ before_script:
   if [ -n "$USE_LIBCXX" ]; then
     CXXFLAGS="$CXXFLAGS -stdlib=libc++"
     CMAKE_EXE_LINKER_FLAGS=-lc++abi
+    export LDFLAGS=-lc++abi
   fi
 
 script:
 - cmake -E make_directory build
-- cmake -E chdir build cmake .. -DJEGP_TEST=ON -DCMAKE_EXE_LINKER_FLAGS="$CMAKE_EXE_LINKER_FLAGS"
+- cmake -E chdir build cmake .. -DJEGP_TEST=ON
 - cmake --build build -j 2
 
 notifications:
