Add .cmake-format.yaml and apply cmake-format

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,8 +1,7 @@
 include(JEGPTestUtilities)
 
 jegp_add_header_test()
-jegp_add_test(utility
-    COMPILE_ONLY
-    COMPILE_OPTIONS
-        $<$<CXX_COMPILER_ID:Clang,AppleClang>:
-            -Wno-missing-braces -Wno-inaccessible-base>)
+jegp_add_test(
+    utility COMPILE_ONLY
+    COMPILE_OPTIONS $<$<CXX_COMPILER_ID:Clang,AppleClang>: -Wno-missing-braces
+                    -Wno-inaccessible-base>)
