--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,5 @@
 language: cpp
+os: linux
 dist: bionic
 
 env:
@@ -10,8 +11,7 @@ env:
 
 jobs:
   include:
-  - os: linux
-    addons:
+  - addons:
       apt:
         packages:
         - latexmk
@@ -24,15 +24,13 @@ jobs:
     env: MATRIX_EVAL="JEGP_DOC=1"
   - os: osx
     compiler: clang
-  - os: linux
-    compiler: gcc
+  - compiler: gcc
     addons:
       apt:
         packages:
         - g++-8
     env: MATRIX_EVAL="CXX=g++-8"
-  - os: linux
-    compiler: gcc
+  - compiler: gcc
     addons:
       apt:
         sources:
@@ -40,16 +38,12 @@ jobs:
         packages:
         - g++-9
     env: MATRIX_EVAL="CXX=g++-9"
-  - os: linux
-    compiler: clang
+  - compiler: clang
     env: MATRIX_EVAL="CLANG_VERSION=6.0.0"
-  - os: linux
-    compiler: clang
-  - os: linux
-    compiler: clang
+  - compiler: clang
+  - compiler: clang
     env: MATRIX_EVAL="CLANG_VERSION=8.0.0"
-  - os: linux
-    compiler: clang
+  - compiler: clang
     env: MATRIX_EVAL="CLANG_VERSION=9.0.0"
 
 before_script:
