--- a/.travis.yml
+++ b/.travis.yml
@@ -40,16 +40,31 @@ jobs:
     env: MATRIX_EVAL="CXX=g++-9"
   - compiler: clang
   - compiler: clang
-    env: MATRIX_EVAL="CLANG_VERSION=8.0.0"
+    addons:
+      apt:
+        sources:
+        - sourceline: 'deb http://apt.llvm.org/bionic/ llvm-toolchain-bionic-8 main'
+          key_url: https://apt.llvm.org/llvm-snapshot.gpg.key
+        packages:
+        - clang-8
+        - libc++-8-dev
+        - libc++abi-8-dev
   - compiler: clang
-    env: MATRIX_EVAL="CLANG_VERSION=9.0.0"
+    addons:
+      apt:
+        sources:
+        - sourceline: 'deb http://apt.llvm.org/bionic/ llvm-toolchain-bionic-9 main'
+          key_url: https://apt.llvm.org/llvm-snapshot.gpg.key
+        packages:
+        - clang-9
+        - libc++-9-dev
+        - libc++abi-9-dev
 
 before_script:
 - eval "${MATRIX_EVAL}"
 - if [ "$TRAVIS_OS_NAME" == "linux" ]; then travis/install_cmake.sh 3.15.4; fi
 - |
-  if [ -n "$CLANG_VERSION" ]; then
-    travis/install_clang.sh ${CLANG_VERSION};
+  if [ $TRAVIS_COMPILER == clang ]; then
     CXXFLAGS="$CXXFLAGS -stdlib=libc++"
     LDFLAGS=-lc++abi
   fi
