--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,9 @@ env:
 
 jobs:
   include:
-  - addons:
+  - compiler: clang
+    env: JEGP_DOC=1
+    addons:
       apt:
         packages:
         - latexmk
@@ -20,26 +22,22 @@ jobs:
         - texlive-fonts-recommended
         - texlive-generic-recommended
         - lmodern
-    compiler: clang
-    env: MATRIX_EVAL="JEGP_DOC=1"
   - os: osx
     compiler: clang
-  - compiler: gcc
+  - compiler: g++-8
     addons:
       apt:
         packages:
         - g++-8
-    env: MATRIX_EVAL="CXX=g++-8"
-  - compiler: gcc
+  - compiler: g++-9
     addons:
       apt:
         sources:
         - sourceline: 'ppa:ubuntu-toolchain-r/test'
         packages:
         - g++-9
-    env: MATRIX_EVAL="CXX=g++-9"
   - compiler: clang
-  - compiler: clang
+  - compiler: clang++-8
     addons:
       apt:
         sources:
@@ -49,7 +47,7 @@ jobs:
         - clang-8
         - libc++-8-dev
         - libc++abi-8-dev
-  - compiler: clang
+  - compiler: clang++-9
     addons:
       apt:
         sources:
@@ -61,13 +59,9 @@ jobs:
         - libc++abi-9-dev
 
 before_script:
-- eval "${MATRIX_EVAL}"
+- if [ $CXX == clang++ ]; then CXXFLAGS="$CXXFLAGS -stdlib=libc++"; fi
+- CXX=$TRAVIS_COMPILER
 - if [ "$TRAVIS_OS_NAME" == "linux" ]; then travis/install_cmake.sh 3.15.4; fi
-- |
-  if [ $TRAVIS_COMPILER == clang ]; then
-    CXXFLAGS="$CXXFLAGS -stdlib=libc++"
-    LDFLAGS=-lc++abi
-  fi
 - |
   if [ -n "$JEGP_DOC" ]; then
     JEGP_OPTIONS="$JEGP_OPTIONS -DJEGP_DOC_PDF=ON -DJEGP_DOC_HTML=Bare"
