--- a/.travis.yml
+++ b/.travis.yml
@@ -36,6 +36,13 @@ jobs:
         - sourceline: 'ppa:ubuntu-toolchain-r/test'
         packages:
         - g++-9
+  - compiler: g++-10
+    addons:
+      apt:
+        sources:
+        - sourceline: 'ppa:ubuntu-toolchain-r/test'
+        packages:
+        - g++-10
   - compiler: clang
   - compiler: clang++-8
     addons:
@@ -57,6 +64,28 @@ jobs:
         - clang-9
         - libc++-9-dev
         - libc++abi-9-dev
+  - compiler: clang++-10
+    addons:
+      apt:
+        sources:
+        - sourceline: 'deb http://apt.llvm.org/bionic/ llvm-toolchain-bionic-10 main'
+          key_url: https://apt.llvm.org/llvm-snapshot.gpg.key
+        packages:
+        - clang-10
+        - libc++-10-dev
+        - libc++abi-10-dev
+  - compiler: clang++-11
+    addons:
+      apt:
+        sources:
+        - sourceline: 'deb http://apt.llvm.org/bionic/ llvm-toolchain-bionic main'
+          key_url: https://apt.llvm.org/llvm-snapshot.gpg.key
+        packages:
+        - clang-11
+        - libc++-11-dev
+        - libc++abi-11-dev
+  allow_failures:
+  - compiler: clang++-11
 
 before_script:
 - if [ $CXX == clang++ ]; then CXXFLAGS="$CXXFLAGS -stdlib=libc++"; fi
