--- a/.cmake-format.yaml
+++ b/.cmake-format.yaml
@@ -1,14 +1,6 @@
+include: [build/_deps/jegp_cmake_modules-src/.cmake-format-additional_commands.yaml]
 parse:
   additional_commands:
-    jegp_add_test:
-      pargs:
-        nargs: 1+
-        flags:
-        - COMPILE_ONLY
-      kwargs:
-        SOURCE: 1
-        COMPILE_OPTIONS: +
-        LINK_LIBRARIES: +
     CPMFindPackage:
       pargs:
         nargs: '*'
